/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */

plugins {
	// Apply the java-library plugin to add support for Java Library
	id 'java'
	id 'eclipse'
	id 'application'
	id 'org.openjfx.javafxplugin' version '0.0.9'
}

javafx {
	version = "15.0.1"
	modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media', 'javafx.graphics']
}

repositories {
// Use jcenter for resolving dependencies.
// You can declare any Maven/Ivy/file repository here.
	jcenter()
}

dependencies {
    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.5.2")
	testRuntime("org.junit.platform:junit-platform-runner:1.5.2")
  	implementation("com.google.guava:guava:30.1-jre")
	implementation 'com.google.code.gson:gson:2.8.6'
	testCompile 'org.junit.jupiter:junit-jupiter-api:5.5.1'
    testCompile "org.testfx:testfx-junit5:4.0.16-alpha"
}


test {
    useJUnitPlatform()
}

version = '1.0'

sourceSets {
    main {
        resources {
            srcDirs "res"
        }
    }
}

jar {
    manifest {
        attributes 'Main-Class': 'jhaturanga.Launcher',
                   'Implementation-Title': 'Jhaturanga',
                   'Implementation-Version': version
    }
    from {
        configurations.compileClasspath.filter{ it.exists() }.collect { it.isDirectory() ? it : zipTree(it) }
    }
    
}

sourceCompatibility = 11
targetCompatibility = 11
mainClassName = "Launcher"
